create form from add page Book Add

--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,1 +1,29 @@
-<h2>Add Book Page</h2>
+<div class="container">
+    <h2>Add Book Page</h2>
+
+<div class="row">
+    <form class="col s12" method="post">
+      <div class="row">
+        <div class="input-field s6 offset-s3">
+          <input name="title" id="title" type="text" class="validate">
+          <label for="title">Title</label>
+        </div>
+        <div class="input-field s6 offset-s3">
+          <input name="price" id="price" type="text" class="validate">
+          <label for="price">Price</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field s6 offset-s3">
+          <input name="url" id="url" type="text" class="validate">
+          <label for="url">Url</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s6">
+          <button class="btn btn-primary" type="submit">add book</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
